--- a/hoist_base/config/mapper_params_online_async.yaml
+++ b/hoist_base/config/mapper_params_online_async.yaml
@@ -10,9 +10,9 @@ slam_toolbox:
     ceres_loss_function: None
 
     # ROS Parameters
-    odom_frame: odom 
+    odom_frame: odom
     map_frame: map
-    base_frame: base_link 
+    base_frame: base_footprint
     scan_topic: /scan
     mode: mapping #localization
 
