finish hoist_decision

--- a/hoist_decision/CMakeLists.txt
+++ b/hoist_decision/CMakeLists.txt
@@ -1,16 +1,65 @@
 cmake_minimum_required(VERSION 3.8)
 project(hoist_decision)
 
+
+set(CMAKE_C_STANDARD 99)
+
+# Default to C++14
+set(CMAKE_CXX_STANDARD 14)
+
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(PCL REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(hoist_msgs REQUIRED)
+find_package(nav2_msgs REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(lifecycle_msgs REQUIRED)
+find_package(action_msgs REQUIRED)
+
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+include_directories(
+  include
+  ${HOIST_DECISION_INCLUDE_DIRS}
+  ${NAVIGATION_INCLUDE_DIRS}
+)
+add_executable(hoist_decision src/hoist_decision.cpp)
 
+ament_target_dependencies(hoist_decision
+  rclcpp
+  sensor_msgs
+  nav_msgs
+  geometry_msgs
+  PCL
+  tf2_ros
+  tf2_geometry_msgs
+  std_srvs
+  hoist_msgs
+  nav2_msgs
+  rclcpp_action
+  lifecycle_msgs
+  action_msgs
+)
+
+install(TARGETS
+  hoist_decision
+  DESTINATION lib/${PROJECT_NAME}
+)
+# install(DIRECTORY
+# )
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
