--- a/hoist_base/config/ekf.yaml
+++ b/hoist_base/config/ekf.yaml
@@ -161,15 +161,15 @@ ekf_filter_node:
         # twist0_nodelay: false
 
         imu0: /imu
-        imu0_config: [false, false, false,
+        imu0_config: [true, true, true,
                       false,  false,  false,
                       false, false, false,
-                      true,  true,  true,
+                      false,  false,  false,
                       true,  true,  true]
         imu0_nodelay: false
         imu0_differential: false
         imu0_relative: true
-        imu0_queue_size: 10
+        imu0_queue_size: 100
         imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
         imu0_twist_rejection_threshold: 0.8                #
         imu0_linear_acceleration_rejection_threshold: 0.8  #
