--- a/hoist_base/config/ekf_gazebo.yaml
+++ b/hoist_base/config/ekf_gazebo.yaml
@@ -88,7 +88,7 @@ ekf_filter_node:
         odom0_config: [false,  false,  false,
                        false, false, false,
                        true, true, false,
-                       false, false, true,
+                       false, false, false,
                        false, false, false]
 
 # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
@@ -161,10 +161,10 @@ ekf_filter_node:
         # twist0_nodelay: false
 
         imu0: /imu
-        imu0_config: [false, false, false,
+        imu0_config: [true, true, true,
                       false,  false,  false,
                       false, false, false,
-                      true,  true,  true,
+                      false,  false,  false,
                       true,  true,  true]
         imu0_nodelay: false
         imu0_differential: false
