--- a/hoist_base/config/nav2_params.yaml
+++ b/hoist_base/config/nav2_params.yaml
@@ -13,12 +13,12 @@ amcl:
     do_beamskip: false
     global_frame_id: "map"
     lambda_short: 0.1
-    laser_likelihood_max_dist: 2.0
-    laser_max_range: 100.0
+    laser_likelihood_max_dist: 0.5
+    laser_max_range: 6.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 2000
+    max_particles: 6000
     min_particles: 500
     odom_frame_id: "odom"
     pf_err: 0.05
@@ -26,7 +26,7 @@ amcl:
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
     resample_interval: 1
-    robot_model_type: "differential"
+    robot_model_type: "omni"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
@@ -38,6 +38,8 @@ amcl:
     z_rand: 0.5
     z_short: 0.05
     scan_topic: scan_filtered
+    set_initial_pose: true
+    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0}
 
 amcl_map_client:
   ros__parameters:
@@ -154,7 +156,7 @@ controller_server:
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.6
+      xy_goal_tolerance: 0.2
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
