--- a/hoist_base/config/nav2_params.yaml
+++ b/hoist_base/config/nav2_params.yaml
@@ -23,13 +23,13 @@ amcl:
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
-    recovery_alpha_fast: 0.0
-    recovery_alpha_slow: 0.0
+    recovery_alpha_fast: 0.1
+    recovery_alpha_slow: 0.001
     resample_interval: 1
     robot_model_type: "omni"
     save_pose_rate: 0.5
     sigma_hit: 0.2
-    tf_broadcast: true
+    tf_broadcast: false
     transform_tolerance: 1.0
     update_min_a: 0.05
     update_min_d: 0.25
@@ -105,9 +105,9 @@ controller_server:
   ros__parameters:
     use_sim_time: False
     controller_frequency: 40.0
-    min_x_velocity_threshold: 0.01
+    min_x_velocity_threshold: 0.05
     min_y_velocity_threshold: 0.5
-    min_theta_velocity_threshold: 0.01
+    min_theta_velocity_threshold: 0.1
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
@@ -192,8 +192,8 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.2
-        inflation_radius: 0.55
+        cost_scaling_factor: 0.3
+        inflation_radius: 0.005
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -210,9 +210,9 @@ local_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 3.0
+          raytrace_max_range: 5.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
+          obstacle_max_range: 5.0
           obstacle_min_range: 0.0
       static_layer:
         map_subscribe_transient_local: True
@@ -255,8 +255,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.2
-        inflation_radius: 0.55
+        cost_scaling_factor: 0.3
+        inflation_radius: 0.005
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
