--- a/hoist_base/config/nav2_params.yaml
+++ b/hoist_base/config/nav2_params.yaml
@@ -192,7 +192,7 @@ local_costmap:
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 0.3
+        cost_scaling_factor: 0.01
         inflation_radius: 0.005
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
@@ -255,7 +255,7 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 0.3
+        cost_scaling_factor: 0.01
         inflation_radius: 0.005
       always_send_full_costmap: True
   global_costmap_client:
@@ -288,6 +288,7 @@ planner_server:
       tolerance: 0.5
       use_astar: false
       allow_unknown: true
+      use_final_approach_orientation: true
 
 planner_server_rclcpp_node:
   ros__parameters:
